<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hint_of_red"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.sanwell.sw_4.controller.activities.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/action_bar_background"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/settings_toolbar_version_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/app_version_titile" />

            <TextView
                android:id="@+id/setting_toolbar_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/settings_toolbar_version_title" />
        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/settings_device_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_activity_toolbar"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/device_number" />

    <EditText
        android:id="@+id/setting_device_number_edit_text"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_device_number_text_view"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_line"
        android:hint="@string/device_number_hint"
        android:singleLine="true"
        android:textCursorDrawable="@null" />

    <TextView
        android:id="@+id/settings_email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_activity_toolbar"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="35dp"
        android:layout_toRightOf="@id/setting_device_number_edit_text"
        android:text="@string/device_email" />

    <EditText
        android:id="@+id/settings_email"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_email_text_view"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/setting_device_number_edit_text"
        android:background="@drawable/edit_text_line"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textCursorDrawable="@null" />

    <Button
        android:id="@+id/settings_refresh_db_button"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_below="@id/setting_device_number_edit_text"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/np_red_button_selector"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:onClick="refreshDBButtonAction"
        android:text="@string/load_images"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/settings_gray_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/gray_background"
        android:elevation="100dp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/settings_refresh_db"
        android:layout_width="350dp"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_background"
        android:elevation="100dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/settings_refresh_db_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif"
            android:paddingLeft="26dp"
            android:paddingTop="25dp"
            android:text="Загрузка изображений"
            android:textColor="#4D4D4D"
            android:textSize="21sp" />

        <ProgressBar
            android:id="@+id/settings_refresh_db_progress_bar"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_refresh_db_title"
            android:indeterminate="false"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="32dp"
            android:progress="50"
            android:progressDrawable="@drawable/red_progress" />

        <TextView
            android:id="@+id/settings_refresh_db_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/settings_refresh_db_progress_bar"
            android:fontFamily="sans-serif"
            android:paddingLeft="33dp"
            android:paddingTop="20dp"
            android:textSize="17sp" />

        <Button
            android:id="@+id/settings_refresh_db_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:onClick="cancelDBRefresh"
            android:paddingBottom="28dp"
            android:paddingRight="21dp"
            android:text="@string/cancel"
            android:textColor="@color/button_title_color"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>
