<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="3"
    tools:context=".ClientsList">

    <RelativeLayout
        android:id="@+id/clients_list_search_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:animateLayoutChanges="true"
        android:background="@drawable/edit_text_shadow"
        android:visibility="invisible">

        <ImageButton
            android:id="@+id/clients_list_search_back_button"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:onClick="hideSearchBar"
            android:paddingLeft="27dp"
            android:src="@drawable/back_icon" />

        <EditText
            android:id="@+id/clients_list_search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/clients_list_search_back_button"
            android:background="@null"
            android:hint="@string/clients_list_search_hint"
            android:imeOptions="actionSearch"
            android:fontFamily="@string/font_regular"
            android:inputType="text"
            android:textSize="20sp"
            android:paddingLeft="30dp" />

        <ImageButton
            android:id="@+id/clients_list_search_cross"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:foregroundGravity="center"
            android:onClick="clearSearchBar"
            android:src="@drawable/cross" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/clients_list_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/clients_list_search_bar"
        android:layout_marginTop="-5dp"
        android:background="@color/red_item_count"
        android:baselineAligned="false">

        <FrameLayout
            android:id="@+id/clients_list_list_frame"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@color/hint_of_red">

            <RelativeLayout
                android:id="@+id/client_list_fish_layout_no_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/client_list_fish_no_result_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/search_illustration" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/client_list_fish_no_result_image_view"
                    android:layout_centerHorizontal="true"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:paddingTop="35dp"
                    android:text="@string/no_result_caption"
                    android:textColor="@color/no_result_caption" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/clients_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <fragment
            android:id="@+id/clients_list_fragment"
            android:name="com.sanwell.sw_4.controller.fragments.ClientsListClientFragment"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/hint_of_red" />

        <fragment
            android:id="@+id/clients_list_info_fragment"
            android:name="com.sanwell.sw_4.controller.fragments.ClientsListInfoFragment"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/hint_of_red" />

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/clients_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/action_bar_background"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:id="@+id/clients_list_gray_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/gray_background"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/clients_list_refresh_db"
        android:layout_width="350dp"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_background"
        android:visibility="gone">

        <TextView
            android:id="@+id/clients_list_refresh_db_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif"
            android:paddingLeft="26dp"
            android:paddingTop="25dp"
            android:text="@string/db_refresh_title"
            android:textColor="#4D4D4D"
            android:textSize="21sp" />

        <ProgressBar
            android:id="@+id/clients_list_refresh_db_progress_bar"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/clients_list_refresh_db_title"
            android:indeterminate="false"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="32dp"
            android:progress="50"
            android:progressDrawable="@drawable/red_progress" />

        <TextView
            android:id="@+id/clients_list_refresh_db_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/clients_list_refresh_db_progress_bar"
            android:fontFamily="sans-serif"
            android:paddingLeft="33dp"
            android:paddingTop="20dp"
            android:textSize="17sp" />

        <Button
            android:id="@+id/clients_list_refresh_db_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:onClick="cancelDBRefresh"
            android:paddingBottom="28dp"
            android:paddingRight="21dp"
            android:text="@string/cancel"
            android:textColor="@color/button_title_color"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/clients_list_prerefresh_db"
        android:layout_width="298dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_background"
        android:visibility="gone">

        <TextView
            android:id="@+id/clients_list_prerefresh_db_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif"
            android:text="@string/refresh_db_title"
            android:textColor="@color/alert_title"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clients_list_prerefresh_db_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/clients_list_prerefresh_db_title"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="27dp"
            android:fontFamily="sans-serif"
            android:text="@string/refresh_db_message"
            android:textSize="17sp" />

        <Button
            android:id="@+id/clients_list_prerefresh_db_accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:onClick="refreshDB"
            android:text="@string/yes"
            android:textColor="@color/button_title_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/clients_list_prerefresh_db_accept_button"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@id/clients_list_prerefresh_db_accept_button"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:onClick="cancelRefreshing"
            android:text="@string/alert_cancel"
            android:textColor="@color/baltic_sea"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/clients_list_upload_order_box"
        android:layout_width="298dp"
        android:layout_height="225dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_background"
        android:visibility="gone">

        <TextView
            android:id="@+id/clients_list_delete_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif"
            android:text="@string/upload_orders_title"
            android:textColor="@color/alert_title"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clients_list_delete_item_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/clients_list_delete_item_title"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif"
            android:text="@string/upload_order_message"
            android:textSize="17sp" />

        <Button
            android:id="@+id/clients_list_alert_single_accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:onClick="uploadOrders"
            android:text="@string/yes"
            android:textColor="@color/button_title_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/clients_list_alert_single_accept_button"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@id/clients_list_alert_single_accept_button"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:onClick="cancelUploading"
            android:text="@string/alert_cancel"
            android:textColor="@color/baltic_sea"
            android:textSize="15sp" />

    </RelativeLayout>

    <ListView
        android:id="@+id/clients_list_suggestions_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clients_list_search_bar"
        android:layout_marginTop="-5dp"
        android:background="@color/white"
        android:divider="@null"
        android:visibility="gone" />

</RelativeLayout>
